Add favicons and fix some static links

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         <link rel="icon" type="image/png" href="{% static '/static/images_favicon/favicon-96x96.png' %}" sizes="96x96">
         <link rel="icon" type="image/png" href="{% static '/static/images_favicon/favicon-16x16.png' %}" sizes="16x16">
         <link rel="icon" type="image/png" href="{% static '/static/images_favicon/favicon-32x32.png' %}" sizes="32x32">
-        <meta name="msapplication-TileColor" content="#2b5797">
+        <meta name="msapplication-TileColor" content="#2d89ef">
         <meta name="msapplication-TileImage" content="{% static '/static/images_favicon/mstile-144x144.png' %}">
         <meta name="msapplication-config" content="{% static '/static/images_favicon/browserconfig.xml' %}">
         <meta name="application-name" content="SHS Geronimo">
