--- a/static/css/main.css
+++ b/static/css/main.css
@@ -114,20 +114,22 @@ table td {
     width: 960px;
     margin: 0 auto 7px;
     background: repeat-x url(../images/footer_bg.png);
-    text-align: center;
+    text-align: left;
     color: #ffffff;
-    height: 16px;
+    height: 25px;
     padding-top: 3px;
     padding-bottom: 3px; /*new*/}
 
-#footer p {
+#footer span {
     font-size: 11px;
-    margin-top: 3px;}
+    margin-top: 4px;
+    margin-left: 15px;
+    margin-right: 15px;}
 
 #footer a {
     color: #fff;}
 
-#footer a: hover {
+#footer a:hover {
     color: #014483;
     text-decoration: none;}
     
