--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         <meta name="application-name" content="SHS Geronimo">
         <meta name="description" content="{% block meta_description %}{% endblock %}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <link rel="stylesheet" href="{% static '/static/css/vendor/font-awesome.css' %}">
         <link rel="stylesheet" href="{% static '/static/css/main.css' %}">
         <style>
             #bannerContainer {
@@ -38,14 +38,6 @@
             {% endblock %}
         </style>
         {% block head %}
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/nl_NL/sdk.js#xfbml=1&version=v2.3&appId=472577352916916";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>      
         {% endblock %}
     </head>
     <body>
@@ -97,12 +89,14 @@
             <div class="clearer"></div>
         </div>
         <div id="footer">
-            <p>© 2007-2015 <a href="#" id="email_contact">Arne de Laat</a></p>
-                    <div class="fb-like" data-href="https://www.facebook.com/pages/SHS-Geronimo/279675712156072" layout="button_count" data-width="80" data-height="40" data-hide-cover="true" data-show-facepile="false" data-show-posts="false">
-           <div class="fb-xfbml-parse-ignore">
-             <blockquote cite="https://www.facebook.com/pages/SHS-Geronimo/279675712156072"><a href="https://www.facebook.com/pages/SHS-Geronimo/279675712156072">SHS Geronimo</a></blockquote>
-           </div>
-        </div>  
+            <span style="float: left;">
+                <a href="https://www.facebook.com/pages/SHS-Geronimo/279675712156072/" target="_blank"> 
+                    <i style="font-size: 2em;" class="fa fa-facebook-square"></i> SHS Geronimo
+                </a>
+            </span>
+            <span style="float: right;">
+                © 2007-2015 <a href="#" id="email_contact">Arne de Laat</a>
+            </span>
         </div>
         <script type="text/javascript">
             {% block script %}
