Remove or fix broken links
Update contact variables.

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
                 </a>
             </span>
             <span style="float: right;">
-                © 2007-2015 <a href="#" id="email_contact">Arne de Laat</a>
+                © 2007-2015 Arne de Laat
             </span>
         </div>
         <script type="text/javascript">
