--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,5 @@
 body {
-    font: 12px 'Lucida Grande', LucidaGrande, Lucida, Helvetica, Arial, sans-serif;
+    font: 13px 'Lucida Grande', LucidaGrande, Lucida, Helvetica, Arial, sans-serif;
     margin: 0 10px 0 40px;
     color: #111111;
     background: url(../images/body_bg.png) repeat-x scroll #555555;
@@ -17,14 +17,15 @@ a:link {
     text-decoration: none;}
 
 a:visited {
-    color: #1e77d3;
+    color: #003180;
     text-decoration: none;}
 
 a:hover,
 a:active {
-    color: #005ab4;
+    color: #0062FF;
     text-decoration: underline;}
 
+.table-left,
 .image-left {
     margin: 3px;
     padding: 3px;
@@ -186,21 +187,20 @@ table td {
     font-size: 12px;
     height: 13px;}
 
-.textw {
+.textwidth {
     width: 640px;}
 
-.limw {
-    width: 490px;}
-
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, h6 {
     color: #0055AA;
-    font-weight: normal;}
+    font-weight: normal;
+    margin-bottom: 0.8em;}
 
 h1 {font-size: 28px;}
 h2 {font-size: 24px;}
 h3 {font-size: 20px;}
 h4 {font-size: 18px;}
 h5 {font-size: 16px;}
+h5 {font-size: 15px;}
 
 #index td {
     text-align: center;
