--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
     <head>
         <meta charset="utf-8">
         <title>{% block title %}SHS Geronimo{% endblock %}</title>
@@ -91,7 +91,7 @@
         </div>
         <div id="footer">
             <span style="float: left;">
-                <a href="https://www.facebook.com/pages/SHS-Geronimo/279675712156072/" target="_blank"> 
+                <a href="https://www.facebook.com/pages/SHS-Geronimo/279675712156072/" target="_blank">
                     <i style="font-size: 2em;" class="fa fa-facebook-square"></i> SHS Geronimo
                 </a>
             </span>
@@ -117,7 +117,7 @@
             var sc_project = 2440066,
                 sc_invisible = 1,
                 sc_security = "4fca23f4",
-                sc_client_storage = "disabled"; 
+                sc_client_storage = "disabled";
         </script>
         <script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
 
