--- a/static/css/main.css
+++ b/static/css/main.css
@@ -132,8 +132,8 @@ table td {
 
 #footer {
     margin: 0 auto 7px;
-    background: repeat-x url(../images/footer_bg.png);
-    padding-top: 3px;
+    background: linear-gradient(to bottom, #003675 0%, #0059c5 10px);
+    padding-top: 8px;
     padding-bottom: 3px;
     width: 960px;
     height: 25px;
@@ -145,7 +145,7 @@ table td {
     margin-top: 4px;
     margin-right: 15px;
     margin-left: 15px;
-    font-size: 11px;
+    font-size: 12px;
 }
 
 #footer a {
