--- a/templates/activiteiten.html
+++ b/templates/activiteiten.html
@@ -12,22 +12,24 @@
             <li>
                 <a class="{% block activiteiten_koningschieten %}{% endblock %}"
                    href="{% url '/activiteiten/koningschieten.html' %}">Koningschieten</a>
-                {% block subsubmenu %}
-                {% endblock %}
             </li>
 <!--
             <li>
-                <a class="{% block activiteiten_ladder %}{% endblock %}"
-                   href="{% url '/activiteiten/ladder.html' %}">Ladder</a>
+                <a class="{% block activiteiten_competitie %}{% endblock %}"
+                   href="{% url '/activiteiten/competitie.html' %}">Ladder</a>
             </li>
  -->
+            <li>
+                <a class="{% block activiteiten_kerstverschieting %}{% endblock %}"
+                   href="{% url '/activiteiten/kerstverschieting.html' %}">Kerstverschieting</a>
+            </li>
             <li>
                 <a class="{% block activiteiten_paasverschieting %}{% endblock %}"
                    href="{% url '/activiteiten/paasverschieting.html' %}">Paasverschieting</a>
             </li>
             <li>
                 <a class="{% block activiteiten_sinterkerstnieuwjaarsverschieting %}{% endblock %}"
-                   href="{% url '/activiteiten/sinterkerstnieuwjaarsverschieting.html' %}">SinterKerstNieuwjaarsverschieting</a>
+                   href="{% url '/activiteiten/sinterkerstnieuwjaarsverschieting.html' %}">SinterKerstNieuwjaar…</a>
             </li>
             <li>
                 <a class="{% block activiteiten_veldschieten %}{% endblock %}"
