--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
         <link rel="stylesheet" href="{% static '/static/css/main.css' %}">
         <style>
             #bannerContainer {
-                background: url('/static/images_site/{% block banner %}ADL_060178.png{% endblock %}') no-repeat;}
+                background-image: url('/static/images_site/{% block banner %}ADL_060178.png{% endblock %}');}
             #pageHeader {
                 {% block logo-position %}top: 10px; left: 280px;{% endblock %}}
 
