Remove unnecessary type attribute for script tags.

--- a/templates/base.html
+++ b/templates/base.html
@@ -99,7 +99,7 @@
                 © 2007-2015 Arne de Laat
             </span>
         </div>
-        <script type="text/javascript">
+        <script>
             {% block script %}
             {% endblock %}
             var bla0 = "mai",
@@ -119,7 +119,7 @@
                 sc_security = "4fca23f4",
                 sc_client_storage = "disabled";
         </script>
-        <script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
+        <script src="http://www.statcounter.com/counter/counter.js"></script>
 
         {% block scripts %}
         {% endblock %}
