Update externals links with rel="noreferrer". Remove target="_blank". Add Halloweenverschieting activity to 2018 calendar. Change http to https where supported. Update copyright year.

--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,7 @@
         </div>
         <div id="footer">
             <span style="float: right;">
-                © 2007-2015 Arne de Laat
+                © 2007-2018 Arne de Laat
             </span>
         </div>
         <script>
@@ -112,7 +112,7 @@
                 sc_security = "4fca23f4",
                 sc_client_storage = "disabled";
         </script>
-        <script src="http://www.statcounter.com/counter/counter.js"></script>
+        <script src="https://www.statcounter.com/counter/counter.js"></script>
 
         {% block scripts %}
         {% endblock %}
