Hard-code external link to photos
The album does not allow embedding since it sets the
'X-Frame-Options: SAMEORIGIN' header

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
                         <li><a class="{% block current_activiteiten %}{% endblock %}"
                                href="{% url '/activiteiten.html' %}">Activiteiten</a></li>
                         <li><a class="{% block current_fotos %}{% endblock %}"
-                               href="{% url '/fotos.html' %}">Foto's</a></li>
+                               href="https://arne.delaat.net/Photos_Archery/">Foto's</a></li>
                         <li><a class="{% block current_filmpjes %}{% endblock %}"
                                href="{% url '/filmpjes.html' %}">Filmpjes</a></li>
                         <li><a class="{% block current_adres %}{% endblock %}"
