Update base template
Remove some unimportant favicons.
Remove statcounter tracking.
Replace Footer text.
Remove unused email replace.

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,24 +5,12 @@
         <title>{% block title %}SHS Geronimo{% endblock %}</title>
 
         <link rel="shortcut icon" href="{% static '/static/images_favicon/favicon.ico' %}">
-        <link rel="apple-touch-icon" sizes="57x57" href="{% static '/static/images_favicon/apple-touch-icon-57x57.png' %}">
-        <link rel="apple-touch-icon" sizes="60x60" href="{% static '/static/images_favicon/apple-touch-icon-60x60.png' %}">
-        <link rel="apple-touch-icon" sizes="72x72" href="{% static '/static/images_favicon/apple-touch-icon-72x72.png' %}">
-        <link rel="apple-touch-icon" sizes="76x76" href="{% static '/static/images_favicon/apple-touch-icon-76x76.png' %}">
-        <link rel="apple-touch-icon" sizes="114x114" href="{% static '/static/images_favicon/apple-touch-icon-114x114.png' %}">
-        <link rel="apple-touch-icon" sizes="144x144" href="{% static '/static/images_favicon/apple-touch-icon-144x144.png' %}">
-        <link rel="apple-touch-icon" sizes="120x120" href="{% static '/static/images_favicon/apple-touch-icon-120x120.png' %}">
-        <link rel="apple-touch-icon" sizes="152x152" href="{% static '/static/images_favicon/apple-touch-icon-152x152.png' %}">
-        <link rel="apple-touch-icon" sizes="180x180" href="{% static '/static/images_favicon/apple-touch-icon-180x180.png' %}">
         <meta name="apple-mobile-web-app-title" content="SHS Geronimo">
         <link rel="icon" type="image/png" href="{% static '/static/images_favicon/favicon-192x192.png' %}" sizes="192x192">
         <link rel="icon" type="image/png" href="{% static '/static/images_favicon/favicon-160x160.png' %}" sizes="160x160">
         <link rel="icon" type="image/png" href="{% static '/static/images_favicon/favicon-96x96.png' %}" sizes="96x96">
         <link rel="icon" type="image/png" href="{% static '/static/images_favicon/favicon-16x16.png' %}" sizes="16x16">
         <link rel="icon" type="image/png" href="{% static '/static/images_favicon/favicon-32x32.png' %}" sizes="32x32">
-        <meta name="msapplication-TileColor" content="#2d89ef">
-        <meta name="msapplication-TileImage" content="{% static '/static/images_favicon/mstile-144x144.png' %}">
-        <meta name="msapplication-config" content="{% static '/static/images_favicon/browserconfig.xml' %}">
         <meta name="application-name" content="SHS Geronimo">
         <meta name="description" content="{% block meta_description %}{% endblock %}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -89,31 +77,13 @@
         </div>
         <div id="footer">
             <span style="float: right;">
-                © 2007-2018 Arne de Laat
+                SHS Geronimo
             </span>
         </div>
         <script>
             {% block script %}
             {% endblock %}
-            var bla0 = "mai",
-                bla1 = "lto",
-                bla2 = ":ar",
-                bla3 = "ne",
-                bla4 = "@d",
-                bla5 = "ela",
-                bla6 = "at.",
-                bla7 = "net",
-                bla = bla0 + bla1 + bla2 + bla3 + bla4 + bla5 + bla6 + bla7;
-            var mail = document.getElementById('email_contact')
-            if (mail !== null) {mail.href = bla};
-
-            var sc_project = 2440066,
-                sc_invisible = 1,
-                sc_security = "4fca23f4",
-                sc_client_storage = "disabled";
         </script>
-        <script src="https://www.statcounter.com/counter/counter.js"></script>
-
         {% block scripts %}
         {% endblock %}
     </body>
